syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_outer_classname = "CommentEventProto";

message CommentEvent {
  int64 commentId = 1;
  int64 authorId = 2;
  int64 postId = 3;
  google.protobuf.Timestamp date = 4;
}

